Fix issue with not showing future events

--- a/client/main.styl
+++ b/client/main.styl
@@ -279,10 +279,8 @@ a:hover, a:focus
 
 select
   background #222
-  border solid 5px white
   padding 5px
-
-
+  border solid 2px white
 
 select:active, select:hover, select:focus
   outline none
